--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ extra_css: "carousel.css"
     </div>
   </nav>
 </header>
-
+<body>
 <main role="main">
 
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -153,7 +153,7 @@ extra_css: "carousel.css"
     <!-- /END THE FEATURETTES -->
 
   </div><!-- /.container -->
-
+</body>
 
   <!-- FOOTER -->
   <footer class="container">
