--- a/index.html
+++ b/index.html
@@ -153,6 +153,27 @@ extra_css: "carousel.css"
     <!-- /END THE FEATURETTES -->
 
   </div><!-- /.container -->
+
+ <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/6.3.1/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#config-web-app -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyCWj0uZnBetl-qZRNIKYEl29eEO-uCkxG4",
+    authDomain: "gers-garage.firebaseapp.com",
+    databaseURL: "https://gers-garage.firebaseio.com",
+    projectId: "gers-garage",
+    storageBucket: "gers-garage.appspot.com",
+    messagingSenderId: "458806580449",
+    appId: "1:458806580449:web:d160884a8dc0a5e6"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
 </body>
 
   <!-- FOOTER -->
