--- a/public/booking.html
+++ b/public/booking.html
@@ -10,7 +10,7 @@
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     
     <!-- CSS Styling -->
-    <link rel="stylesheet" type="text/css" href="./css/styles.css">
+    <link rel="stylesheet" href="booking.css">
   
 
 <header>
@@ -22,23 +22,24 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#">Home </a>
+          <a class="nav-link" href="index.html">Home </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" href="pricing.html">Pricing</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">booking <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="booking.html">booking <span class="sr-only">(current)</span></a>
         </li>
       </ul>
-      <form class="form-inline mt-2 mt-md-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
-    </div>
-  </nav>
+      <li class="nav-item">
+        <a class="nav-link" href="booking.html">login</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 </header>
-
+<br>
+<br>
   <div class="content">
     <div class="calendar-container">
       <div class="calendar"> 
@@ -89,7 +90,7 @@
     <div class="dialog" id="dialog">
         <h2 class="dialog-header"> Add New Event </h2>
         <form class="form" id="form">
-          <div class="form-container" align="center">
+          <div class="form-container" align ="center">
             <label class="form-label" id="valueFromMyButton" for="name">Event name</label>
             <input class="input" type="text" id="name" maxlength="36">
             <label class="form-label" id="valueFromMyButton" for="count">Number of people to invite</label>
