--- a/public/index.html
+++ b/public/index.html
@@ -22,19 +22,18 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" href="pricing.html">Pricing</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">booking</a>
+          <a class="nav-link" href="booking.html">booking</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="booking.html">login</a>
         </li>
       </ul>
-      <form class="form-inline mt-2 mt-md-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
     </div>
   </nav>
 </header>
@@ -52,9 +51,9 @@
         <img src=" mechanic-cover-img-1.jpg" alt="Mechanic At Work" width="100%" height="100%" >
         <div class="container">
           <div class="carousel-caption text-left">
-            <h1>Example headline.</h1>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-            <p><a class="btn btn-lg btn-primary" href="#" role="button">Book Now</a></p>
+            <h1>Book A Service</h1>
+            <p>Book your Skoda in for a service today. Choose your date today!</p>
+            <p><a class="btn btn-lg btn-primary" href="booking.html" role="button">Book Now</a></p>
           </div>
         </div>
       </div>
@@ -101,21 +100,21 @@
     <div class="row">
       <div class="col-lg-4">
         <img src="motor.png" width="140" height="140"> 
-        <h2>Heading</h2>
-        <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-        <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+        <h2>All Your Engine Needs</h2>
+        <p>Is your car in need of a service? We work with all Skoda types. Book your car or SUV in now. </p>
+        <p><a class="btn btn-secondary" href="booking.html" role="button">Book Now! »</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img src="transportation.png" width="140" height="140"> 
-        <h2>Heading</h2>
-        <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-        <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+        <h2>Pick A Service</h2>
+        <p>We have different plans to suit your needs. Get your vehicle serviced by our approved team. </p>
+        <p><a class="btn btn-secondary" href="pricing.html" role="button">Choose A Service »</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img src="wrench.png" width="140" height="140"> 
-        <h2>Heading</h2>
-        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+        <h2>Benefits</h2>
+        <p> Your Skoda deserves the best. We can help. Each vehicle receives our 140 point inspection.</p>
+        <p><a class="btn btn-secondary" href="booking.html" role="button">Book Now »</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
